+ $Id$

11/23/2000: Initial release on sourceforge - version 0.8.1
11/25/2000: included projecthours in projects
11/26/2000: included pstatistics,pbilling,pdelivery in projects
11/28/2000: fixed bugs in invoice-print + numbers-counting
            some layout changes
            rework search & projects data access
11/28/2000: release - version 0.8.2
11/29/2000: update tax to work with float values
11/30/2000: included address field in p_projects table
            removed p_projectaddress table
            included address in print invoice & delivery
12/01/2000: update activities listing in editproject
12/02/2000: update lang -> Project ID, Activity ID, Invoice ID, Delivery ID
12/03/2000: moved select own address to preferences
12/09/2000: update invoice & activities to display currency 