@@ -59,7 +59,7 @@ p {
 font-family: Tahoma,Verdana,Arial,Helvetica,sans-serif; 
 font-variant: normal;
 font-size: 12pt; 
-font-weight: normal;
+font-weight: bold;
 color: #000000;
  
 line-height: normal;
